<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".TelaCadastro">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nome_completo" />

    <EditText
        android:id="@+id/tfNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvErroNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_login" />

    <EditText
        android:id="@+id/tfNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvErroLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_senha" />

    <EditText
        android:id="@+id/tfSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvErroSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="false"
        android:text="@string/tv_sexo"
        android:textIsSelectable="true" />

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/op_feminino" />

        <RadioButton
            android:id="@+id/rdMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/op_masculino" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvErroSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_nascimento" />

    <EditText
        android:id="@+id/tfNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/tvErroNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_telefone" />

    <EditText
        android:id="@+id/tfTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvErroTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/linkHome"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/message_voltar_home"
        android:textColor="#03A9F4" />

    <TextView
        android:id="@+id/linkLogin"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_fazer_login"
        android:textColor="#2196F3" />

    <Button
        android:id="@+id/btCadastrarDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro" />

</LinearLayout>