<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="150dp"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".TelaLogin">

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_login" />

    <EditText
        android:id="@+id/tfNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvErroLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_senha" />

    <EditText
        android:id="@+id/tfSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvErroSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/linkHome"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/message_voltar_home"
        android:textColor="#03A9F4" />

    <TextView
        android:id="@+id/linkCadastrar"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_fazer_cadastro"
        android:textColor="#2196F3" />

    <Button
        android:id="@+id/btLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Login" />
</LinearLayout>